--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CardDetailActivity"></activity>
+
+        <activity android:name=".CardDetailActivity"
+            android:theme="@style/AppTheme.PopUp">
+        </activity>
+
+        <activity android:name=".BattlefieldActivity"></activity>
     </application>
 
 </manifest>
